more progress on thread management
the server starts properly, server can be stopped, application can be quitted.